# UHD-Fairwaves

./: .gitignore  README
debian/: changelog  control  copyright  rules  umtrx.install  umtrx.links
firmware/zpu/: CMakeLists.txt
firmware/zpu/apps/: txrx_uhd.c
firmware/zpu/lib/: CMakeLists.txt  eeprom.c  gpsdo.c  gpsdo.h  hal_uart.c  memory_map.h  net_common.c  pkt_ctrl.c  pkt_ctrl.h  spi.c  u2_init.c  umtrx_init.c
firmware/zpu/lwip_port/arch/: cc.h
firmware/zpu/usrp2p/: CMakeLists.txt  bootloader_utils.c  spi_flash_read.c  udp_fw_update.c  xilinx_s3_icap.c  xilinx_s6_icap.c  xilinx_s6_icap.h
fpga/control_lib/: Makefile.srcs  axis_spi_core.v  s6_icap_wb.v  settings_fifo_ctrl.v  simple_spi_core.v
fpga/coregen/: coregen.cgp  pll_clk.v  pll_rx.v  pll_rx.xco
fpga/extramfifo/: ext_fifo.v  nobl_if.v
fpga/fifo/: Makefile.srcs  add_routing_header.v
fpga/gpsdo/: Makefile.srcs  gpsdo.vhd
fpga/sdr_lib/: Makefile.srcs  ddc_chain.v  duc_chain.v  rx_frontend.v
fpga/simple_gemac/: simple_gemac_wrapper.v
fpga/top/UmTRX/: Makefile.UmTRX  Makefile.UmTRXv2  Makefile.UmTRXv2_4DDC  Makefile.UmTRXv2_nosram  bootloader_umtrx.rmi  mapextraeffortioreg.xds  remove_ifdefs.py  u2plus_core.v  u2plus_umtrx.v  u2plus_umtrx_v2.ucf  u2plus_umtrx_v2.v  umtrx_core.v  umtrx_packet_dispatcher.v  umtrx_router.v  umtrx_rx_chain.v  umtrx_tx_chain.v
fpga/top/UmTRX/coregen/: chipscope_icon.ncf  chipscope_icon.ngc  chipscope_icon.v  chipscope_icon.veo  chipscope_icon.xco  chipscope_icon.xise  chipscope_icon_flist.txt  chipscope_icon_readme.txt  chipscope_icon_xmdf.tcl  chipscope_ila.cdc  chipscope_ila.ncf  chipscope_ila.ngc  chipscope_ila.v  chipscope_ila.veo  chipscope_ila.xco  chipscope_ila.xise  chipscope_ila_flist.txt  chipscope_ila_readme.txt  chipscope_ila_xmdf.tcl  fifo_axi_36.gise  fifo_axi_36.v  fifo_axi_36.xco  fifo_axi_36.xise  xil_4I46cm.in  xil_4I46cm.out  xil_v7XciV.in  xil_v7XciV.out
fpga/udp/: prot_eng_tx.v
fpga/usrp2/control_lib/: s3a_icap_wb.v  s6_icap_wb.v
fpga/usrp2/coregen/: pll_clk.v  pll_clk.xco
fpga/usrp2/extramfifo/: ext_fifo.v  nobl_fifo.v
fpga/usrp2/fifo/: packet_router.v
fpga/usrp2/sdr_lib/: Makefile.srcs  dsp_core_rx.v  dsp_core_tx.v  frontend_sw.v  tx_frontend.v
fpga/usrp2/top/N2x0/: Makefile  Makefile.UmTRX  bootloader_umtrx.rmi  u2plus.v  u2plus_core.v  u2plus_fairwaves.ucf  (+4 more)
fpga/usrp2/vrt/: vita_tx_chain.v  vita_tx_control.v  vita_tx_deframer.v
fpga/vrt/: gen_context_pkt.v  vita_tx_chain.v
host/: CMakeLists.txt  ads1015_ctrl.cpp  ads1015_ctrl.hpp  io_impl.cpp  lms6002d.cpp  lms6002d.hpp  lms6002d_ctrl.cpp  lms6002d_ctrl.hpp  power_amp.cpp  power_amp.hpp  tmp102_ctrl.cpp  tmp102_ctrl.hpp  umsel2_ctrl.cpp  umsel2_ctrl.hpp  umtrx_common.hpp  umtrx_eeprom.cpp  umtrx_fifo_ctrl.cpp  umtrx_fifo_ctrl.hpp  umtrx_find.cpp  umtrx_iface.cpp  umtrx_iface.hpp  umtrx_impl.cpp  umtrx_impl.hpp  umtrx_io_impl.cpp  umtrx_log_adapter.hpp  umtrx_monitor.cpp  umtrx_regs.hpp  umtrx_test_chains.cpp  umtrx_version.in.hpp
host/cmake/: GetGitRevisionDescription.cmake
host/cmake/Modules/: UHDPackage.cmake
host/cores/: adf4350_regs.hpp  apply_corrections.cpp  async_packet_handler.hpp  rx_dsp_core_200.cpp  rx_dsp_core_200.hpp  super_recv_packet_handler.hpp  super_send_packet_handler.hpp  tx_dsp_core_200.cpp
host/examples/: tx_waveforms.cpp
host/include/uhd/usrp/: dboard_iface.hpp  mboard_eeprom.hpp
host/lib/usrp/: dboard_manager.cpp  mboard_eeprom.cpp
host/lib/usrp/dboard/: db_lms.cpp
host/lib/usrp/umtrx/: CMakeLists.txt  dboard_iface.cpp  io_impl.cpp  lms6002d.cpp  lms6002d.hpp  lms_regs.hpp  umtrx_impl.cpp  umtrx_impl.hpp  umtrx_regs.hpp
host/lib/usrp/usrp2/: CMakeLists.txt  clock_ctrl.cpp  codec_ctrl.cpp  dboard_iface.cpp  fw_common.h  lms_dboard_iface.cpp  lms_dboard_iface.hpp  usrp2_clk_regs.hpp  usrp2_iface.cpp  usrp2_iface.hpp  usrp2_impl.cpp  usrp2_impl.hpp  usrp2_regs.hpp
host/missing/: platform.cpp  platform.hpp
host/usrp2/: fw_common.h
host/utils/: CMakeLists.txt  lms_reg_dump.cpp  lms_reg_dump.sh  lms_reg_rw.cpp  plot_csv_tx_dc_cal.py  uhd_cal_rx_iq_balance.cpp  uhd_cal_tx_dc_offset.cpp  uhd_cal_tx_dc_offset_lms.cpp  uhd_cal_tx_iq_balance.cpp  umtrx_auto_calibration  umtrx_cal_tx_dc_offset.cpp  umtrx_cal_tx_dc_offset.py  umtrx_cal_tx_iq_balance.cpp  umtrx_ctrl.py  umtrx_detect.py  umtrx_firmware  umtrx_gps_coord  umtrx_lms.py  umtrx_net_burner  umtrx_net_burner.py  umtrx_nmea  umtrx_pa_ctrl.cpp  umtrx_property_tree.py  umtrx_query_sensors  umtrx_query_sensors.py  umtrx_query_versions  umtrx_test_chains.cpp  umtrx_test_gains.cpp  umtrx_vcxo.py  umtrx_vswr.py  usrp_burn_mb_eeprom.cpp  usrp_cal_utils.hpp  usrp_n2xx_net_burner.py
host/utils/collectd/: umtrx.conf  umtrx.types.db  umtrx2collectd.py
images/: u2plus_umtrx_v2.bin.fixed
old/host/examples/: rx_multi_samples.cpp  tx_samples_from_file.cpp
old/host/utils/: CMakeLists.txt  lms_reg_dump.sh  uhd_cal_rx_iq_balance.cpp  uhd_cal_tx_dc_offset.cpp  uhd_cal_tx_dc_offset_lms.cpp  usrp_cal_utils.hpp  usrp_n2xx_net_burner.py
umtrx/fpga/control_lib/: s6_icap_wb.v
umtrx/fpga/coregen/: pll_clk.v  pll_rx.v
umtrx/fpga/extramfifo/: coregen.cgp  nobl_fifo.v
umtrx/fpga/fifo/: packet_router.v
umtrx/fpga/sdr_lib/: dsp_core_rx.v
umtrx/host/: CMakeLists.txt  dboard_iface.cpp  io_impl.cpp  lms6002d_ctrl.cpp  lms6002d_ctrl.hpp  umtrx_find.cpp  umtrx_iface.cpp  umtrx_iface.hpp  umtrx_impl.cpp  umtrx_impl.hpp  umtrx_io_impl.cpp  umtrx_regs.hpp  usrp2_impl.cpp  usrp2_impl.hpp
umtrx/host/old_cores/: rx_dsp_core_200.cpp
umtrx/zpu/lib/: CMakeLists.txt  gpsdo.c  gpsdo.h  memory_map.h  pic.c
umtrx/zpu/umtrx/: CMakeLists.txt  bootloader_utils.h  xilinx_s3_icap.h
zpu/: CMakeLists.txt
zpu/apps/: txrx_uhd.c
zpu/lib/: CMakeLists.txt  eeprom.c  eeprom.h  gpsdo.c  gpsdo.h  hal_io.h  hal_uart.c  hal_uart.h  i2c.c  mdelay.c  memory_map.h  pkt_ctrl.c  pkt_ctrl.h  spi.c  time64.c  time64.h  u2_init.c  udp_uart.c  umtrx_init.c  umtrx_init.h
zpu/umtrx/: CMakeLists.txt  bootloader_utils.c  ethernet.c  spi_flash.h  spi_flash_read.c  spif.c  udp_fw_update.c
zpu/umtrx/bootloader/: CMakeLists.txt
(+251 files in other folders)
